force-app/main/default/objects/custom_create326__c/custom_create326__c.object-meta.xml
<CustomObject>
    <label>Custom created object326</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects326</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>