force-app/main/default/objects/custom_create326__c/fields/custom_create_326field593__c.field-meta.xml
<CustomField>
    <fullName>custom_create_326field593__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 326field593</label>
    <type>Checkbox</type>
</CustomField>