force-app/main/default/objects/custom_create326__c/fields/custom_create_326field714__c.field-meta.xml
<CustomField>
    <fullName>custom_create_326field714__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 326field714</label>
    <type>Checkbox</type>
</CustomField>